--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="stylesheet" href="styles.css"
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
 </head>
@@ -19,6 +20,20 @@
                 <input placeholder="Senha" type="Password">
                 <i class="fi fi-bs-lock"></i>
             </div>
+
+                <div class="remember-forgot">
+                    <label>
+                    <input type="checkbox">
+                    Lembrar minha senha
+                </label>
+                <a href="#">Esquci minha senha</a>
+                </div>
+
+                <button type="submit" class="entrar">Entrar</button>
+
+                <div class="register-link">
+                    <p>Não tem conta?  <a href="#">Cadastre-se</a></p>
+                </div>
 
 
 
