--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
 </head>
 <body>
-    <h1>Cadastro Quiz</h1>
+    
     <main class="container">
+        <h1>Cadastro Quiz</h1>
         <form>
             <div class="input-box">
-                <input placeholder="Usuário" type="emial">
+                <input placeholder="Usuário" type="email">
                 <i class="fi fi-bs-user"></i>
             </div>
             <div class="input-box">
@@ -26,7 +27,7 @@
                     <input type="checkbox">
                     Lembrar minha senha
                 </label>
-                <a href="#">Esquci minha senha</a>
+                <a href="#">Esqueci minha senha</a>
                 </div>
 
                 <button type="submit" class="entrar">Entrar</button>
